Put Java 16 in more places